[gd_scene load_steps=4 format=4 uid="uid://c3krt5e47uu1s"]

[ext_resource type="Script" uid="uid://ci6rhvile1ddx" path="res://scenes/room/room.gd" id="1_3ppxh"]
[ext_resource type="TileSet" uid="uid://bulmmqywxne06" path="res://theme/tileset/room/level_one_room.tres" id="2_l1jnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2cke"]
size = Vector2(315, 280)

[node name="LevelOneRoom" type="Node2D" node_paths=PackedStringArray("item_positions")]
script = ExtResource("1_3ppxh")
item_positions = [NodePath("Item1"), NodePath("Item2"), NodePath("Item3")]

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAMAAAABAAAAAAAKAAMAAAACAAAAAAAKAAMAAAADAAAAAAAKAAMAAAAEAAAAAAAKAAMAAAAFAAAAAAAKAAMAAAAGAAAAAAAKAAMAAAAHAAAAAAAKAAMAAAAIAAAAAAAKAAMAAAAJAAAAAAAKAAMAAAAAAP//AAAKAAMAAAAAAP7/AAAKAAMAAAAAAP3/AAAKAAMAAAAAAPz/AAAKAAMAAAAAAPv/AAAKAAMAAAAAAPr/AAAKAAMAAAAAAPn/AAAKAAMAAAAAAPj/AAAKAAMAAAAAAPf/AAAKAAMAAAD//wAAAAAKAAMAAAD+/wAAAAAKAAMAAAD9/wAAAAAKAAMAAAD8/wAAAAAKAAMAAAD7/wAAAAAKAAMAAAD6/wAAAAAKAAMAAAD5/wAAAAAKAAMAAAD4/wAAAAAKAAMAAAD3/wAAAAAKAAMAAAD2/wAAAAAKAAMAAAAAAAEAAAAKAAMAAAAAAAIAAAAKAAMAAAAAAAMAAAAKAAMAAAAAAAQAAAAKAAMAAAAAAAUAAAAKAAMAAAAAAAYAAAAKAAMAAAAAAAcAAAAKAAMAAAAAAAgAAAAKAAMAAAD2//f/AAAKAAMAAAD2//j/AAAKAAMAAAD2//n/AAAKAAMAAAD2//r/AAAKAAMAAAD2//v/AAAKAAMAAAD2//z/AAAKAAMAAAD2//3/AAAKAAMAAAD2//7/AAAKAAMAAAD2////AAAKAAMAAAD2/wEAAAAKAAMAAAD2/wIAAAAKAAMAAAD2/wMAAAAKAAMAAAD2/wQAAAAKAAMAAAD2/wUAAAAKAAMAAAD2/wYAAAAKAAMAAAD2/wcAAAAKAAMAAAD2/wgAAAAKAAMAAAD3//f/AAAKAAMAAAD3//j/AAAKAAMAAAD3//n/AAAKAAMAAAD3//r/AAAKAAMAAAD3//v/AAAKAAMAAAD3//z/AAAKAAMAAAD3//3/AAAKAAMAAAD3//7/AAAKAAMAAAD3////AAAKAAMAAAD3/wEAAAAKAAMAAAD3/wIAAAAKAAMAAAD3/wMAAAAKAAMAAAD3/wQAAAAKAAMAAAD3/wUAAAAKAAMAAAD3/wYAAAAKAAMAAAD3/wcAAAAKAAMAAAD3/wgAAAAKAAMAAAD4//f/AAAKAAMAAAD4//j/AAAKAAMAAAD4//n/AAAKAAMAAAD4//r/AAAKAAMAAAD4//v/AAAKAAMAAAD4//z/AAAKAAMAAAD4//3/AAAKAAMAAAD4//7/AAAKAAMAAAD4////AAAKAAMAAAD4/wEAAAAKAAMAAAD4/wIAAAAKAAMAAAD4/wMAAAAKAAMAAAD4/wQAAAAKAAMAAAD4/wUAAAAKAAMAAAD4/wYAAAAKAAMAAAD4/wcAAAAKAAMAAAD4/wgAAAAKAAMAAAD5//f/AAAKAAMAAAD5//j/AAAKAAMAAAD5//n/AAAKAAMAAAD5//r/AAAKAAMAAAD5//v/AAAKAAMAAAD5//z/AAAKAAMAAAD5//3/AAAKAAMAAAD5//7/AAAKAAMAAAD5////AAAKAAMAAAD5/wEAAAAKAAMAAAD5/wIAAAAKAAMAAAD5/wMAAAAKAAMAAAD5/wQAAAAKAAMAAAD5/wUAAAAKAAMAAAD5/wYAAAAKAAMAAAD5/wcAAAAKAAMAAAD5/wgAAAAKAAMAAAD6//f/AAAKAAMAAAD6//j/AAAKAAMAAAD6//n/AAAKAAMAAAD6//r/AAAKAAMAAAD6//v/AAAKAAMAAAD6//z/AAAKAAMAAAD6//3/AAAKAAMAAAD6//7/AAAKAAMAAAD6////AAAKAAMAAAD6/wEAAAAKAAMAAAD6/wIAAAAKAAMAAAD6/wMAAAAKAAMAAAD6/wQAAAAKAAMAAAD6/wUAAAAKAAMAAAD6/wYAAAAKAAMAAAD6/wcAAAAKAAMAAAD6/wgAAAAKAAMAAAD7//f/AAAKAAMAAAD7//j/AAAKAAMAAAD7//n/AAAKAAMAAAD7//r/AAAKAAMAAAD7//v/AAAKAAMAAAD7//z/AAAKAAMAAAD7//3/AAAKAAMAAAD7//7/AAAKAAMAAAD7////AAAKAAMAAAD7/wEAAAAKAAMAAAD7/wIAAAAKAAMAAAD7/wMAAAAKAAMAAAD7/wQAAAAKAAMAAAD7/wUAAAAKAAMAAAD7/wYAAAAKAAMAAAD7/wcAAAAKAAMAAAD7/wgAAAAKAAMAAAD8//f/AAAKAAMAAAD8//j/AAAKAAMAAAD8//n/AAAKAAMAAAD8//r/AAAKAAMAAAD8//v/AAAKAAMAAAD8//z/AAAKAAMAAAD8//3/AAAKAAMAAAD8//7/AAAKAAMAAAD8////AAAKAAMAAAD8/wEAAAAKAAMAAAD8/wIAAAAKAAMAAAD8/wMAAAAKAAMAAAD8/wQAAAAKAAMAAAD8/wUAAAAKAAMAAAD8/wYAAAAKAAMAAAD8/wcAAAAKAAMAAAD8/wgAAAAKAAMAAAD9//f/AAAKAAMAAAD9//j/AAAKAAMAAAD9//n/AAAKAAMAAAD9//r/AAAKAAMAAAD9//v/AAAKAAMAAAD9//z/AAAKAAMAAAD9//3/AAAKAAMAAAD9//7/AAAKAAMAAAD9////AAAKAAMAAAD9/wEAAAAKAAMAAAD9/wIAAAAKAAMAAAD9/wMAAAAKAAMAAAD9/wQAAAAKAAMAAAD9/wUAAAAKAAMAAAD9/wYAAAAKAAMAAAD9/wcAAAAKAAMAAAD9/wgAAAAKAAMAAAD+//f/AAAKAAMAAAD+//j/AAAKAAMAAAD+//n/AAAKAAMAAAD+//r/AAAKAAMAAAD+//v/AAAKAAMAAAD+//z/AAAKAAMAAAD+//3/AAAKAAMAAAD+//7/AAAKAAMAAAD+////AAAKAAMAAAD+/wEAAAAKAAMAAAD+/wIAAAAKAAMAAAD+/wMAAAAKAAMAAAD+/wQAAAAKAAMAAAD+/wUAAAAKAAMAAAD+/wYAAAAKAAMAAAD+/wcAAAAKAAMAAAD+/wgAAAAKAAMAAAD///f/AAAKAAMAAAD///j/AAAKAAMAAAD///n/AAAKAAMAAAD///r/AAAKAAMAAAD///v/AAAKAAMAAAD///z/AAAKAAMAAAD///3/AAAKAAMAAAD///7/AAAKAAMAAAD/////AAAKAAMAAAD//wEAAAAKAAMAAAD//wIAAAAKAAMAAAD//wMAAAAKAAMAAAD//wQAAAAKAAMAAAD//wUAAAAKAAMAAAD//wYAAAAKAAMAAAD//wcAAAAKAAMAAAD//wgAAAAKAAMAAAABAPf/AAAKAAMAAAABAPj/AAAKAAMAAAABAPn/AAAKAAMAAAABAPr/AAAKAAMAAAABAPv/AAAKAAMAAAABAPz/AAAKAAMAAAABAP3/AAAKAAMAAAABAP7/AAAKAAMAAAABAP//AAAKAAMAAAABAAEAAAAKAAMAAAABAAIAAAAKAAMAAAABAAMAAAAKAAMAAAABAAQAAAAKAAMAAAABAAUAAAAKAAMAAAABAAYAAAAKAAMAAAABAAcAAAAKAAMAAAABAAgAAAAKAAMAAAACAPf/AAAKAAMAAAACAPj/AAAKAAMAAAACAPn/AAAKAAMAAAACAPr/AAAKAAMAAAACAPv/AAAKAAMAAAACAPz/AAAKAAMAAAACAP3/AAAKAAMAAAACAP7/AAAKAAMAAAACAP//AAAKAAMAAAACAAEAAAAKAAMAAAACAAIAAAAKAAMAAAACAAMAAAAKAAMAAAACAAQAAAAKAAMAAAACAAUAAAAKAAMAAAACAAYAAAAKAAMAAAACAAcAAAAKAAMAAAACAAgAAAAKAAMAAAADAPf/AAAKAAMAAAADAPj/AAAKAAMAAAADAPn/AAAKAAMAAAADAPr/AAAKAAMAAAADAPv/AAAKAAMAAAADAPz/AAAKAAMAAAADAP3/AAAKAAMAAAADAP7/AAAKAAMAAAADAP//AAAKAAMAAAADAAEAAAAKAAMAAAADAAIAAAAKAAMAAAADAAMAAAAKAAMAAAADAAQAAAAKAAMAAAADAAUAAAAKAAMAAAADAAYAAAAKAAMAAAADAAcAAAAKAAMAAAADAAgAAAAKAAMAAAAEAPf/AAAKAAMAAAAEAPj/AAAKAAMAAAAEAPn/AAAKAAMAAAAEAPr/AAAKAAMAAAAEAPv/AAAKAAMAAAAEAPz/AAAKAAMAAAAEAP3/AAAKAAMAAAAEAP7/AAAKAAMAAAAEAP//AAAKAAMAAAAEAAEAAAAKAAMAAAAEAAIAAAAKAAMAAAAEAAMAAAAKAAMAAAAEAAQAAAAKAAMAAAAEAAUAAAAKAAMAAAAEAAYAAAAKAAMAAAAEAAcAAAAKAAMAAAAEAAgAAAAKAAMAAAAFAPf/AAAKAAMAAAAFAPj/AAAKAAMAAAAFAPn/AAAKAAMAAAAFAPr/AAAKAAMAAAAFAPv/AAAKAAMAAAAFAPz/AAAKAAMAAAAFAP3/AAAKAAMAAAAFAP7/AAAKAAMAAAAFAP//AAAKAAMAAAAFAAEAAAAKAAMAAAAFAAIAAAAKAAMAAAAFAAMAAAAKAAMAAAAFAAQAAAAKAAMAAAAFAAUAAAAKAAMAAAAFAAYAAAAKAAMAAAAFAAcAAAAKAAMAAAAFAAgAAAAKAAMAAAAGAPf/AAAKAAMAAAAGAPj/AAAKAAMAAAAGAPn/AAAKAAMAAAAGAPr/AAAKAAMAAAAGAPv/AAAKAAMAAAAGAPz/AAAKAAMAAAAGAP3/AAAKAAMAAAAGAP7/AAAKAAMAAAAGAP//AAAKAAMAAAAGAAEAAAAKAAMAAAAGAAIAAAAKAAMAAAAGAAMAAAAKAAMAAAAGAAQAAAAKAAMAAAAGAAUAAAAKAAMAAAAGAAYAAAAKAAMAAAAGAAcAAAAKAAMAAAAGAAgAAAAKAAMAAAAHAPf/AAAKAAMAAAAHAPj/AAAKAAMAAAAHAPn/AAAKAAMAAAAHAPr/AAAKAAMAAAAHAPv/AAAKAAMAAAAHAPz/AAAKAAMAAAAHAP3/AAAKAAMAAAAHAP7/AAAKAAMAAAAHAP//AAAKAAMAAAAHAAEAAAAKAAMAAAAHAAIAAAAKAAMAAAAHAAMAAAAKAAMAAAAHAAQAAAAKAAMAAAAHAAUAAAAKAAMAAAAHAAYAAAAKAAMAAAAHAAcAAAAKAAMAAAAHAAgAAAAKAAMAAAAIAPf/AAAKAAMAAAAIAPj/AAAKAAMAAAAIAPn/AAAKAAMAAAAIAPr/AAAKAAMAAAAIAPv/AAAKAAMAAAAIAPz/AAAKAAMAAAAIAP3/AAAKAAMAAAAIAP7/AAAKAAMAAAAIAP//AAAKAAMAAAAIAAEAAAAKAAMAAAAIAAIAAAAKAAMAAAAIAAMAAAAKAAMAAAAIAAQAAAAKAAMAAAAIAAUAAAAKAAMAAAAIAAYAAAAKAAMAAAAIAAcAAAAKAAMAAAAIAAgAAAAKAAMAAAAJAPf/AAAKAAMAAAAJAPj/AAAKAAMAAAAJAPn/AAAKAAMAAAAJAPr/AAAKAAMAAAAJAPv/AAAKAAMAAAAJAPz/AAAKAAMAAAAJAP3/AAAKAAMAAAAJAP7/AAAKAAMAAAAJAP//AAAKAAMAAAAJAAEAAAAKAAMAAAAJAAIAAAAKAAMAAAAJAAMAAAAKAAMAAAAJAAQAAAAKAAMAAAAJAAUAAAAKAAMAAAAJAAYAAAAKAAMAAAAJAAcAAAAKAAMAAAAJAAgAAAAKAAMAAAD+//T/AAAKAAMAAAD+//X/AAAKAAMAAAD+//b/AAAKAAMAAAD///T/AAAKAAMAAAD///X/AAAKAAMAAAD///b/AAAKAAMAAAAAAPT/AAAKAAMAAAAAAPX/AAAKAAMAAAAAAPb/AAAKAAMAAAABAPT/AAAKAAMAAAABAPX/AAAKAAMAAAABAPb/AAAKAAMAAAD0//7/AAAKAAMAAAD0////AAAKAAMAAAD0/wAAAAAKAAMAAAD0/wEAAAAKAAMAAAD1//7/AAAKAAMAAAD1////AAAKAAMAAAD1/wAAAAAKAAMAAAD1/wEAAAAKAAMAAAD//wkAAAAKAAMAAAD//woAAAAKAAMAAAD//wsAAAAKAAMAAAAAAAkAAAAKAAMAAAAAAAoAAAAKAAMAAAAAAAsAAAAKAAMAAAABAAkAAAAKAAMAAAABAAoAAAAKAAMAAAABAAsAAAAKAAMAAAD+/wkAAAAKAAMAAAD+/woAAAAKAAMAAAD+/wsAAAAKAAMAAAAKAP7/AAAKAAMAAAAKAP//AAAKAAMAAAAKAAAAAAAKAAMAAAAKAAEAAAAKAAMAAAALAP7/AAAKAAMAAAALAP//AAAKAAMAAAALAAAAAAAKAAMAAAALAAEAAAAKAAMAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="Walls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//T/AAABAAAAAAD9//X/AAABAAIAAAD9//b/AAABAAMAAAD8//T/AAABAAAAAAD8//X/AAABAAIAAAD8//b/AAABAAMAAAD7//T/AAABAAAAAAD7//X/AAABAAIAAAD7//b/AAABAAMAAAD6//T/AAABAAAAAAD6//X/AAABAAIAAAD6//b/AAABAAMAAAD5//T/AAABAAAAAAD5//X/AAABAAIAAAD5//b/AAABAAMAAAD4//T/AAABAAAAAAD4//X/AAABAAIAAAD4//b/AAABAAMAAAD3//T/AAABAAAAAAD3//X/AAABAAIAAAD3//b/AAABAAMAAAD2//T/AAABAAAAAAD2//X/AAABAAIAAAD2//b/AAABAAMAAAACAPT/AAABAAAAAAACAPX/AAABAAIAAAACAPb/AAABAAMAAAADAPT/AAABAAAAAAADAPX/AAABAAIAAAADAPb/AAABAAMAAAAEAPT/AAABAAAAAAAEAPX/AAABAAIAAAAEAPb/AAABAAMAAAAFAPT/AAABAAAAAAAFAPX/AAABAAIAAAAFAPb/AAABAAMAAAAGAPT/AAABAAAAAAAGAPX/AAABAAIAAAAGAPb/AAABAAMAAAAHAPT/AAABAAAAAAAHAPX/AAABAAIAAAAHAPb/AAABAAMAAAAIAPT/AAABAAAAAAAIAPX/AAABAAIAAAAIAPb/AAABAAMAAAAJAPT/AAABAAAAAAAJAPX/AAABAAIAAAAJAPb/AAABAAMAAAD1//T/AAABAAAAAAD0//T/AAAAAAAAAAD0//X/AAAAAAEAAAD0//b/AAAAAAEAAAD0//f/AAAAAAEAAAD0//j/AAAAAAEAAAD0//n/AAAAAAEAAAD0//r/AAAAAAEAAAD0//v/AAAAAAEAAAD0//z/AAAAAAIAAAD0//3/AAAAAAMAAAD1//X/AAACAAEAAAD1//b/AAACAAEAAAD1//f/AAACAAEAAAD1//j/AAACAAEAAAD1//n/AAACAAEAAAD1//r/AAACAAEAAAD1//v/AAACAAEAAAD1//z/AAACAAIAAAD1//3/AAACAAMAAAAKAPX/AAAAAAEAAAAKAPb/AAAAAAEAAAAKAPf/AAAAAAEAAAAKAPj/AAAAAAEAAAAKAPn/AAAAAAEAAAAKAPr/AAAAAAEAAAAKAPv/AAAAAAEAAAALAPX/AAACAAEAAAALAPb/AAACAAEAAAALAPf/AAACAAEAAAALAPj/AAACAAEAAAALAPn/AAACAAEAAAALAPr/AAACAAEAAAALAPv/AAACAAEAAAAKAPT/AAABAAAAAAALAPT/AAACAAAAAAAKAPz/AAAAAAIAAAAKAP3/AAAAAAMAAAALAPz/AAACAAIAAAALAP3/AAACAAMAAAACAAkAAAAAAAAAAAADAAkAAAABAAAAAAAEAAkAAAABAAAAAAAFAAkAAAABAAAAAAAGAAkAAAABAAAAAAAHAAkAAAABAAAAAAAIAAkAAAABAAAAAAAJAAkAAAABAAAAAAACAAoAAAAAAAIAAAADAAoAAAABAAIAAAAEAAoAAAABAAIAAAAFAAoAAAABAAIAAAAGAAoAAAABAAIAAAAHAAoAAAABAAIAAAAIAAoAAAABAAIAAAAJAAoAAAABAAIAAAACAAsAAAAAAAMAAAADAAsAAAABAAMAAAAEAAsAAAABAAMAAAAFAAsAAAABAAMAAAAGAAsAAAABAAMAAAAHAAsAAAABAAMAAAAIAAsAAAABAAMAAAAJAAsAAAABAAMAAAD2/wkAAAABAAAAAAD3/wkAAAABAAAAAAD4/wkAAAABAAAAAAD5/wkAAAABAAAAAAD6/wkAAAABAAAAAAD7/wkAAAABAAAAAAD8/wkAAAABAAAAAAD9/wkAAAACAAAAAAD2/woAAAABAAIAAAD3/woAAAABAAIAAAD4/woAAAABAAIAAAD5/woAAAABAAIAAAD6/woAAAABAAIAAAD7/woAAAABAAIAAAD8/woAAAABAAIAAAD9/woAAAACAAIAAAD2/wsAAAABAAMAAAD3/wsAAAABAAMAAAD4/wsAAAABAAMAAAD5/wsAAAABAAMAAAD6/wsAAAABAAMAAAD7/wsAAAABAAMAAAD8/wsAAAABAAMAAAD9/wsAAAACAAMAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAgAAAAAAAEAAAAKAAkAAAABAAEAAAAKAAoAAAABAAIAAAAKAAsAAAABAAMAAAALAAIAAAACAAAAAAALAAMAAAACAAEAAAALAAQAAAACAAEAAAALAAUAAAACAAEAAAALAAYAAAACAAEAAAALAAcAAAACAAEAAAALAAgAAAACAAEAAAALAAkAAAACAAEAAAALAAoAAAACAAIAAAALAAsAAAACAAMAAAD0/wIAAAAAAAAAAAD0/wMAAAAAAAEAAAD0/wQAAAAAAAEAAAD0/wUAAAAAAAEAAAD0/wYAAAAAAAEAAAD0/wcAAAAAAAEAAAD0/wgAAAAAAAEAAAD0/wkAAAAAAAEAAAD0/woAAAAAAAIAAAD0/wsAAAAAAAMAAAD1/wIAAAACAAAAAAD1/wMAAAACAAEAAAD1/wQAAAACAAEAAAD1/wUAAAACAAEAAAD1/wYAAAACAAEAAAD1/wcAAAACAAEAAAD1/wgAAAACAAEAAAD1/wkAAAABAAEAAAD1/woAAAABAAIAAAD1/wsAAAABAAMAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="TileData" type="TileMapLayer" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
tile_map_data = PackedByteArray("AAD3//j/AAABAAYAAAAIAAcAAAABAAYAAAAIAPj/AAABAAYAAAD3/wcAAAABAAYAAAD3//n/AAABAAYAAAD4//n/AAABAAYAAAD4//r/AAABAAYAAAD5//r/AAABAAYAAAD6//v/AAABAAYAAAD7//z/AAABAAYAAAD8//z/AAABAAYAAAD9//3/AAABAAYAAAD+//7/AAABAAYAAAD/////AAABAAYAAAAAAAAAAAABAAYAAAABAAAAAAABAAYAAAACAAEAAAABAAYAAAADAAEAAAABAAYAAAADAAIAAAABAAYAAAAEAAIAAAABAAYAAAAEAAMAAAABAAYAAAD3//r/AAABAAYAAAD3//v/AAABAAYAAAD3//z/AAABAAYAAAD3//3/AAABAAYAAAD3//7/AAABAAYAAAD3////AAABAAYAAAD3/wAAAAABAAYAAAD3/wEAAAABAAYAAAD3/wIAAAABAAYAAAD3/wMAAAABAAYAAAD3/wQAAAABAAYAAAD3/wUAAAABAAYAAAD3/wYAAAABAAYAAAD4//j/AAABAAYAAAD4//v/AAABAAYAAAD4//z/AAABAAYAAAD4//3/AAABAAYAAAD4//7/AAABAAYAAAD4////AAABAAYAAAD4/wAAAAABAAYAAAD4/wEAAAABAAYAAAD4/wIAAAABAAYAAAD4/wMAAAABAAYAAAD4/wQAAAABAAYAAAD4/wUAAAABAAYAAAD4/wYAAAABAAYAAAD4/wcAAAABAAYAAAD5//j/AAABAAYAAAD5//n/AAABAAYAAAD5//v/AAABAAYAAAD5//z/AAABAAYAAAD5//3/AAABAAYAAAD5//7/AAABAAYAAAD5////AAABAAYAAAD5/wAAAAABAAYAAAD5/wEAAAABAAYAAAD5/wIAAAABAAYAAAD5/wMAAAABAAYAAAD5/wQAAAABAAYAAAD5/wUAAAABAAYAAAD5/wYAAAABAAYAAAD5/wcAAAABAAYAAAD6//j/AAABAAYAAAD6//n/AAABAAYAAAD6//r/AAABAAYAAAD6//z/AAABAAYAAAD6//3/AAABAAYAAAD6//7/AAABAAYAAAD6////AAABAAYAAAD6/wAAAAABAAYAAAD6/wEAAAABAAYAAAD6/wIAAAABAAYAAAD6/wMAAAABAAYAAAD6/wQAAAABAAYAAAD6/wUAAAABAAYAAAD6/wYAAAABAAYAAAD6/wcAAAABAAYAAAD7//j/AAABAAYAAAD7//n/AAABAAYAAAD7//r/AAABAAYAAAD7//v/AAABAAYAAAD7//3/AAABAAYAAAD7//7/AAABAAYAAAD7////AAABAAYAAAD7/wAAAAABAAYAAAD7/wEAAAABAAYAAAD7/wIAAAABAAYAAAD7/wMAAAABAAYAAAD7/wQAAAABAAYAAAD7/wUAAAABAAYAAAD7/wYAAAABAAYAAAD7/wcAAAABAAYAAAD8//j/AAABAAYAAAD8//n/AAABAAYAAAD8//r/AAABAAYAAAD8//v/AAABAAYAAAD8//3/AAABAAYAAAD8//7/AAABAAYAAAD8////AAABAAYAAAD8/wAAAAABAAYAAAD8/wEAAAABAAYAAAD8/wIAAAABAAYAAAD8/wMAAAABAAYAAAD8/wQAAAABAAYAAAD8/wUAAAABAAYAAAD8/wYAAAABAAYAAAD8/wcAAAABAAYAAAD9//j/AAABAAYAAAD9//n/AAABAAYAAAD9//r/AAABAAYAAAD9//v/AAABAAYAAAD9//z/AAABAAYAAAD9//7/AAABAAYAAAD9////AAABAAYAAAD9/wAAAAABAAYAAAD9/wEAAAABAAYAAAD9/wIAAAABAAYAAAD9/wMAAAABAAYAAAD9/wQAAAABAAYAAAD9/wUAAAABAAYAAAD9/wYAAAABAAYAAAD9/wcAAAABAAYAAAD+//j/AAABAAYAAAD+//n/AAABAAYAAAD+//r/AAABAAYAAAD+//v/AAABAAYAAAD+//z/AAABAAYAAAD+//3/AAABAAYAAAD+////AAABAAYAAAD+/wAAAAABAAYAAAD+/wEAAAABAAYAAAD+/wIAAAABAAYAAAD+/wMAAAABAAYAAAD+/wQAAAABAAYAAAD+/wUAAAABAAYAAAD+/wYAAAABAAYAAAD+/wcAAAABAAYAAAD///j/AAABAAYAAAD///n/AAABAAYAAAD///r/AAABAAYAAAD///v/AAABAAYAAAD///z/AAABAAYAAAD///3/AAABAAYAAAD///7/AAABAAYAAAD//wAAAAABAAYAAAD//wEAAAABAAYAAAD//wIAAAABAAYAAAD//wMAAAABAAYAAAD//wQAAAABAAYAAAD//wUAAAABAAYAAAD//wYAAAABAAYAAAD//wcAAAABAAYAAAAAAPj/AAABAAYAAAAAAPn/AAABAAYAAAAAAPr/AAABAAYAAAAAAPv/AAABAAYAAAAAAPz/AAABAAYAAAAAAP3/AAABAAYAAAAAAP7/AAABAAYAAAAAAP//AAABAAYAAAAAAAEAAAABAAYAAAAAAAIAAAABAAYAAAAAAAMAAAABAAYAAAAAAAQAAAABAAYAAAAAAAUAAAABAAYAAAAAAAYAAAABAAYAAAAAAAcAAAABAAYAAAABAPj/AAABAAYAAAABAPn/AAABAAYAAAABAPr/AAABAAYAAAABAPv/AAABAAYAAAABAPz/AAABAAYAAAABAP3/AAABAAYAAAABAP7/AAABAAYAAAABAP//AAABAAYAAAABAAEAAAABAAYAAAABAAIAAAABAAYAAAABAAMAAAABAAYAAAABAAQAAAABAAYAAAABAAUAAAABAAYAAAABAAYAAAABAAYAAAABAAcAAAABAAYAAAACAPj/AAABAAYAAAACAPn/AAABAAYAAAACAPr/AAABAAYAAAACAPv/AAABAAYAAAACAPz/AAABAAYAAAACAP3/AAABAAYAAAACAP7/AAABAAYAAAACAP//AAABAAYAAAACAAAAAAABAAYAAAACAAIAAAABAAYAAAACAAMAAAABAAYAAAACAAQAAAABAAYAAAACAAUAAAABAAYAAAACAAYAAAABAAYAAAACAAcAAAABAAYAAAADAPj/AAABAAYAAAADAPn/AAABAAYAAAADAPr/AAABAAYAAAADAPv/AAABAAYAAAADAPz/AAABAAYAAAADAP3/AAABAAYAAAADAP7/AAABAAYAAAADAP//AAABAAYAAAADAAAAAAABAAYAAAADAAMAAAABAAYAAAADAAQAAAABAAYAAAADAAUAAAABAAYAAAADAAYAAAABAAYAAAADAAcAAAABAAYAAAAEAPj/AAABAAYAAAAEAPn/AAABAAYAAAAEAPr/AAABAAYAAAAEAPv/AAABAAYAAAAEAPz/AAABAAYAAAAEAP3/AAABAAYAAAAEAP7/AAABAAYAAAAEAP//AAABAAYAAAAEAAAAAAABAAYAAAAEAAEAAAABAAYAAAAEAAQAAAABAAYAAAAEAAUAAAABAAYAAAAEAAYAAAABAAYAAAAEAAcAAAABAAYAAAAFAPj/AAABAAYAAAAFAPn/AAABAAYAAAAFAPr/AAABAAYAAAAFAPv/AAABAAYAAAAFAPz/AAABAAYAAAAFAP3/AAABAAYAAAAFAP7/AAABAAYAAAAFAP//AAABAAYAAAAFAAAAAAABAAYAAAAFAAEAAAABAAYAAAAFAAIAAAABAAYAAAAFAAMAAAABAAYAAAAFAAQAAAABAAYAAAAFAAUAAAABAAYAAAAFAAYAAAABAAYAAAAFAAcAAAABAAYAAAAGAPj/AAABAAYAAAAGAPn/AAABAAYAAAAGAPr/AAABAAYAAAAGAPv/AAABAAYAAAAGAPz/AAABAAYAAAAGAP3/AAABAAYAAAAGAP7/AAABAAYAAAAGAP//AAABAAYAAAAGAAAAAAABAAYAAAAGAAEAAAABAAYAAAAGAAIAAAABAAYAAAAGAAMAAAABAAYAAAAGAAQAAAABAAYAAAAGAAUAAAABAAYAAAAGAAYAAAABAAYAAAAGAAcAAAABAAYAAAAHAPj/AAABAAYAAAAHAPn/AAABAAYAAAAHAPr/AAABAAYAAAAHAPv/AAABAAYAAAAHAPz/AAABAAYAAAAHAP3/AAABAAYAAAAHAP7/AAABAAYAAAAHAP//AAABAAYAAAAHAAAAAAABAAYAAAAHAAEAAAABAAYAAAAHAAIAAAABAAYAAAAHAAMAAAABAAYAAAAHAAQAAAABAAYAAAAHAAUAAAABAAYAAAAHAAYAAAABAAYAAAAHAAcAAAABAAYAAAAIAPn/AAABAAYAAAAIAPr/AAABAAYAAAAIAPv/AAABAAYAAAAIAPz/AAABAAYAAAAIAP3/AAABAAYAAAAIAP7/AAABAAYAAAAIAP//AAABAAYAAAAIAAAAAAABAAYAAAAIAAEAAAABAAYAAAAIAAIAAAABAAYAAAAIAAMAAAABAAYAAAAIAAQAAAABAAYAAAAIAAUAAAABAAYAAAAIAAYAAAABAAYAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="Doors" type="Node2D" parent="."]

[node name="DoorsUp" type="TileMapLayer" parent="Doors"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD+//T/AAAPAAUAAAABAPT/AAARAAUAAAD+//b/AAAPAAcAAAABAPb/AAARAAcAAAD///b/AAAQAAcAAAAAAPb/AAAQAAcAAAD///T/AAAQAAUAAAAAAPT/AAAQAAUAAAD+//X/AAAPAAYAAAABAPX/AAARAAYAAAA=")
enabled = false
tile_set = ExtResource("2_l1jnv")

[node name="DoorsDown" type="TileMapLayer" parent="Doors"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD+/wsAAAAPAAcAAAABAAsAAAARAAcAAAD+/wkAAAAPAAUAAAABAAkAAAARAAUAAAD//wkAAAAQAAUAAAAAAAkAAAAQAAUAAAD+/woAAAAPAAYAAAABAAoAAAARAAYAAAD//wsAAAAQAAcAAAAAAAsAAAAQAAcAAAA=")
enabled = false
tile_set = ExtResource("2_l1jnv")

[node name="DoorsLeft" type="TileMapLayer" parent="Doors"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD0//7/AAAPAAUAAAD1//7/AAARAAUAAAD0/wEAAAAPAAcAAAD1/wEAAAARAAcAAAD0/wAAAAAPAAYAAAD0////AAAPAAYAAAD1////AAARAAYAAAD1/wAAAAARAAYAAAA=")
enabled = false
tile_set = ExtResource("2_l1jnv")

[node name="DoorsRight" type="TileMapLayer" parent="Doors"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAKAP7/AAAPAAUAAAAKAAEAAAAPAAcAAAALAP7/AAARAAUAAAALAAEAAAARAAcAAAAKAP//AAAPAAYAAAAKAAAAAAAPAAYAAAALAP//AAARAAYAAAALAAAAAAARAAYAAAA=")
enabled = false
tile_set = ExtResource("2_l1jnv")

[node name="WallsLayers" type="Node2D" parent="."]

[node name="WallsUp" type="TileMapLayer" parent="WallsLayers"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD9//T/AAABAAAAAAD+//T/AAABAAAAAAD///T/AAABAAAAAAAAAPT/AAABAAAAAAABAPT/AAABAAAAAAACAPT/AAABAAAAAAD8//T/AAABAAAAAAADAPT/AAABAAAAAAD8//X/AAABAAIAAAD9//X/AAABAAIAAAD+//X/AAABAAIAAAD///X/AAABAAIAAAAAAPX/AAABAAIAAAABAPX/AAABAAIAAAACAPX/AAABAAIAAAADAPX/AAABAAIAAAD8//b/AAABAAMAAAD9//b/AAABAAMAAAD+//b/AAABAAMAAAD///b/AAABAAMAAAAAAPb/AAABAAMAAAABAPb/AAABAAMAAAACAPb/AAABAAMAAAADAPb/AAABAAMAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="WallsDown" type="TileMapLayer" parent="WallsLayers"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD8/wkAAAABAAAAAAD9/wkAAAABAAAAAAD+/wkAAAABAAAAAAD//wkAAAABAAAAAAAAAAkAAAABAAAAAAABAAkAAAABAAAAAAACAAkAAAABAAAAAAADAAkAAAABAAAAAAD8/woAAAABAAIAAAD9/woAAAABAAIAAAD+/woAAAABAAIAAAD//woAAAABAAIAAAAAAAoAAAABAAIAAAABAAoAAAABAAIAAAACAAoAAAABAAIAAAADAAoAAAABAAIAAAD8/wsAAAABAAMAAAD9/wsAAAABAAMAAAD+/wsAAAABAAMAAAD//wsAAAABAAMAAAAAAAsAAAABAAMAAAABAAsAAAABAAMAAAACAAsAAAABAAMAAAADAAsAAAABAAMAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="WallsLeft" type="TileMapLayer" parent="WallsLayers"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD0//r/AAAAAAEAAAD0//v/AAAAAAEAAAD0//z/AAAAAAEAAAD0//3/AAAAAAEAAAD0//7/AAAAAAEAAAD0////AAAAAAEAAAD0/wAAAAAAAAEAAAD0/wEAAAAAAAEAAAD0/wIAAAAAAAEAAAD0/wMAAAAAAAEAAAD1//r/AAACAAEAAAD1//v/AAACAAEAAAD1//z/AAACAAEAAAD1//3/AAACAAEAAAD1//7/AAACAAEAAAD1////AAACAAEAAAD1/wAAAAACAAEAAAD1/wEAAAACAAEAAAD1/wIAAAACAAEAAAD1/wMAAAACAAEAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="WallsRight" type="TileMapLayer" parent="WallsLayers"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAKAPr/AAAAAAEAAAAKAPv/AAAAAAEAAAAKAPz/AAAAAAEAAAAKAP3/AAAAAAEAAAAKAP7/AAAAAAEAAAAKAP//AAAAAAEAAAAKAAAAAAAAAAEAAAAKAAEAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAEAAAALAPr/AAACAAEAAAALAPv/AAACAAEAAAALAPz/AAACAAEAAAALAP3/AAACAAEAAAALAP7/AAACAAEAAAALAP//AAACAAEAAAALAAAAAAACAAEAAAALAAEAAAACAAEAAAALAAIAAAACAAEAAAALAAMAAAACAAEAAAA=")
tile_set = ExtResource("2_l1jnv")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_w2cke")

[node name="PlayerSpawnPonsition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 98)

[node name="Item1" type="Marker2D" parent="."]
position = Vector2(70, -70)

[node name="Item2" type="Marker2D" parent="."]
position = Vector2(0, -70)

[node name="Item3" type="Marker2D" parent="."]
position = Vector2(-70, -70)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
